[package]
name = "stacklock"
version = "0.1.0"
authors = ["Steven Stewart-Gallus <sstewartgallus00@mylangara.bc.ca>"]
repository = "https://sstewartgallus.com/git?p=qlock.git;a=summary"
readme = "README"
license = "Apache-2.0"
categories = ["concurrency", "data-structures"]

[features]
lin-log = ["lazy_static"]

[dependencies]
sleepfast = "1.0"
dontshare = "1.0"
weakrand = "1.0"
syscall = "0.2"
libc = "0.2"
lazy_static = { version = "0.2", optional = true }

[dev-dependencies]
parking_lot = { version = "0.4" }
criterion = { git = "https://github.com/japaric/criterion.rs" }

[profile.dev]
opt-level = 3

[replace]
"criterion-stats:0.1.0" = { git = 'https://github.com/sstewartgallus/stats.rs', branch = 'nounique' }
