[package]
name = "qlock_util"
version = "0.1.0"
authors = ["Steven Stewart-Gallus <sstewartgallus00@mylangara.bc.ca>"]
repository = "https://sstewartgallus.com/git?p=uevents-rs.git;a=summary"
license = "Apache-2.0"
categories = ["concurrency", "data-structures"]

[features]
nightly = []

[dependencies]
rand = "0.3"
syscall = "0.2"
